# mato

./: Cargo.toml  LICENSE  README.md  justfile
src/: cli.rs  cyclic_list.rs  helpers.rs  main.rs
