[package]
name = "mato"
description = "🍅 Yet another pomodoro TUI timer"
version = "1.0.1"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/arsmoriendy/mato"
keywords = ["pomodoro", "TUI", "ratatui"]
categories = ["command-line-utilities"]
exclude = ["assets"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
notify-rust = "4.11.7"
ratatui = "0.29.0"
